--- a/index.html
+++ b/index.html
@@ -6,23 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <link href="css/on-off-switch.css" rel="stylesheet">
   </head>
   <body>
     <div class="page-grid">
       <header class="flex">
-        <h1 class="main-heading"><span>Your</span>App&#153</h1>
+        <h1 class="main-heading"><span>Your</span>App&#8482;</h1>
         <div class="user-heading flex">
-          <img class="notification-bell" src="icons/icon-bell.svg" alt="Notification Bell">
+          <div class="notification-bell">
+            <img src="icons/icon-bell.svg" alt="Notification Bell">
+            <div class="notification-dot"></div>
+          </div>
           <img class="profile-img" src="images/profile-img.jpg" alt="profile-img">
           <span class="username">Josh Sulivan</span>
         </div>
       </header>
       <nav>
         <div class="nav-icons flex">
-          <img src="icons/icon-dashboard.svg" alt="Dashboard Icon">
-          <img src="icons/icon-members.svg" alt="Members Icon">
-          <img src="icons/icon-visits.svg" alt="Visits Icon">
-          <img src="icons/icon-settings.svg" alt="Settings Icon">
+          <a href=""><img src="icons/icon-dashboard.svg" alt="Dashboard Icon"></a>
+          <a href=""><img src="icons/icon-members.svg" alt="Members Icon"></a>
+          <a href=""><img src="icons/icon-visits.svg" alt="Visits Icon"></a>
+          <a href=""><img src="icons/icon-settings.svg" alt="Settings Icon"></a>
         </div>
       </nav>
       <main class="content-grid">
@@ -31,24 +35,34 @@
           <div class="searchbar flex">
             <input type="search" id="search" name="search" placeholder="Search">
           </div>
+        </div>
+        <div class="alert">
+          <p><span>Alert </span>Chart data is updated every 24 hours.</p>
+          <p class="close">&times;</p>
         </div>  
         <div class="web-traffic-div">
           <h3>TRAFFIC</h3>
-          <canvas id="web-traffic-chart"></canvas>
+          <div class="canvas-container">
+            <canvas id="web-traffic-chart"></canvas>
+          </div>
         </div>
         <div class="daily-traffic-div">
           <h3>DAILY TRAFFIC</h3>
-          <canvas id="daily-traffic-chart"></canvas>
+          <div class="canvas-container">
+            <canvas id="daily-traffic-chart"></canvas>
+          </div>
         </div>
         <div class="mobile-user-div">
           <h3>MOBILE USERS</h3>
-          <canvas id="mobile-user-chart"></canvas>
+          <div class="canvas-container">
+            <canvas id="mobile-user-chart"></canvas>
+          </div>
         </div>
         <div class="social-stats">
           <h3>SOCIAL STATS</h3>
           <div class="stats-box flex">
             <div class="svg-container">
-              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              <svg version="1.1" id="twitter" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                 viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve"> 
               <path fill="#fff" d="M32,3.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6C25.8,0.8,24,0,22.2,0
                 c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5C10.3,7.8,5.5,5.2,2.2,1.2c-0.6,1-0.9,2.1-0.9,3.3c0,2.3,1.2,4.3,2.9,5.5
@@ -64,7 +78,7 @@
           </div>
           <div class="stats-box flex">
             <div class="svg-container">
-              <svg enable-background="new 0 0 56.693px 56.693px" id="Layer_1" version="1.1" viewBox="0 0 62 56.693" 
+              <svg enable-background="new 0 0 56.693px 56.693px" id="facebook" version="1.1" viewBox="0 0 62 56.693" 
                 xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <path fill="#fff" d="M40.43,21.739h-7.645v-5.014c0-1.883,1.248-2.322,2.127-2.322c0.877,0,5.395,0,5.395,0V6.125l-7.43-0.029  
                 c-8.248,0-10.125,6.174-10.125,10.125v5.518h-4.77v8.53h4.77c0,10.947,0,24.137,0,24.137h10.033c0,0,0-13.32,0-24.137h6.77  
@@ -78,7 +92,7 @@
           </div>
           <div class="stats-box flex">
             <div class="svg-container">
-              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              <svg version="1.1" id="google" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                 viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
               <path fill="#fff" d="M17.7,25.7c0-0.3,0-0.5-0.1-0.8c-0.1-0.2-0.1-0.5-0.2-0.7c-0.1-0.2-0.2-0.4-0.3-0.7c-0.2-0.2-0.3-0.4-0.4-0.6
                 c-0.1-0.2-0.3-0.3-0.5-0.6c-0.2-0.2-0.4-0.4-0.5-0.5c-0.1-0.1-0.3-0.3-0.6-0.5c-0.3-0.2-0.5-0.4-0.6-0.4s-0.3-0.2-0.6-0.4
@@ -172,7 +186,7 @@
         </div>
         <div class="message-user flex">
           <h3>MESSAGE USER</h3>
-          <form class="flex">
+          <form class="flex" id="message-user-form">
             <input type="search" id="user-search" name="user-search" placeholder="Search for User">
             <textarea name="user-message" id="user-message" placeholder="Message for User"></textarea>
             <input type="submit" id="send-button" name="send-button" value="SEND">
@@ -183,27 +197,23 @@
           <form class="flex"> 
             <div class="flex">
               <p>Send Email Notifications</p>
-              <div>
-                <input type="checkbox" id="switch" class="checkbox"/> 
-                <label for="switch" class="toggle"> 
-                  <div class="toggle-text flex">
-                    <span>OFF</span>  
-                    <span>ON</span>
-                  </div>  
+              <div class="onoffswitch">
+                <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" tabindex="0" checked>
+                <label class="onoffswitch-label" for="myonoffswitch">
+                    <span class="onoffswitch-inner"></span>
+                    <span class="onoffswitch-switch"></span>
                 </label>
               </div>
             </div> 
             <div class="flex">
               <p>Set Profile to Public</p>
-              <div>
-                <input type="checkbox" id="switch2" class="checkbox"/> 
-                <label for="switch2" class="toggle"> 
-                  <div class="toggle-text flex">
-                    <span>OFF</span>  
-                    <span>ON</span>
-                  </div> 
+              <div class="onoffswitch">
+                <input type="checkbox" name="onoffswitch2" class="onoffswitch-checkbox" id="myonoffswitch2" tabindex="0" checked>
+                <label class="onoffswitch-label" for="myonoffswitch2">
+                    <span class="onoffswitch-inner"></span>
+                    <span class="onoffswitch-switch"></span>
                 </label>
-              </div> 
+              </div>
             </div>
             <select id="timezone-select" name="timezone-select">
               <option>Eastern</option>
